Toujours: Fix issues with widget block centre alignment.

--- a/toujours/blocks.css
+++ b/toujours/blocks.css
@@ -333,14 +333,14 @@ hr.wp-block-separator {
 5.0 Blocks - Widget Blocks
 --------------------------------------------------------------*/
 
-/* Archives, Categories & Latest Posts */
+/* General Widget styles */
 
-.wp-block-archives.aligncenter,
 .wp-block-categories.aligncenter,
-.wp-block-latest-posts.aligncenter {
+.wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
+.wp-block-latest-posts.aligncenter,
+.wp-block-latest-comments.aligncenter {
 	list-style-position: inside;
-	margin-left: 1.5em;
-	margin-right: 1.5em;
 	text-align: center;
 }
 
