--- a/toujours/editor-blocks.css
+++ b/toujours/editor-blocks.css
@@ -814,13 +814,12 @@
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-/* Categories, Archives & Recent Posts */
+/* General Widget styles */
 
-[data-align="center"] .wp-block-archives ul,
-[data-align="center"] .wp-block-categories ul,
-[data-align="center"] .wp-block-latest-posts ul {
+.edit-post-visual-editor [data-align="center"] .wp-block-categories__list,
+.edit-post-visual-editor [data-align="center"] .wp-block-archives,
+.edit-post-visual-editor [data-align="center"] .wp-block-lastest-posts {
 	list-style-position: inside;
-	text-align: center;
 }
 
 /* Categories */
